<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFilterActivity"
    android:background="@drawable/filter">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/ChooseProductCategory_textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/filter_filter_by"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/companyType_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_baseline_home_work_24" />

                <TextView
                    android:id="@+id/product_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:text="@string/filter_product"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/productCategory_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_round_card_giftcard_24" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/filter_company"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/organization_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_round_business_24" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/filter_organization"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/timePrefrence_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_baseline_access_time_24" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/filter_opening_hours"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#FFFFFF" />

        <LinearLayout
            android:id="@+id/availableProducts_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/availableProducts_textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/filter_available_products"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/product_listView"
                android:layout_width="match_parent"
                android:layout_height="750dp"
                android:choiceMode="multipleChoice" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/companyType_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/companyType_textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/filter_company_types"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/companyTypes_listView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:choiceMode="multipleChoice" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/organizations_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ChooseOrganisation_textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/filter_organizations"
                android:textSize="20sp"
                android:textStyle="bold" />

            <SearchView
                android:id="@+id/Search_View"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:queryHint="Select an Organisation">

            </SearchView>

            <ListView
                android:id="@+id/OrganizationList_View"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/search"
                android:choiceMode="multipleChoice"
                android:listSelector="@color/teal_700"
                android:nestedScrollingEnabled="true" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/specificOpeningTimes_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/filter_openeing_hours_options"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/specificOpeningHours_checkBox"
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:text="@string/filter_choose_opening_hours" />

                <CheckBox
                    android:id="@+id/CurrentlyOpen_checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="disableSpecificOpeningTimes"
                    android:text="@string/filter_currently_open" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/filter_day" />

                    <Spinner
                        android:id="@+id/spinner_week"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/filter_opening_hours" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:text="@string/filter_from" />

                        <Spinner
                            android:id="@+id/spinner_from"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="12" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:text="@string/filter_to" />

                        <Spinner
                            android:id="@+id/spinner_to"
                            android:layout_width="15dp"
                            android:layout_height="match_parent"
                            android:layout_weight="12" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/Delivery_checkBox"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/filter_delivery"
                android:textSize="14sp"
                android:textStyle="normal" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/submit_Button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_baseline_check_circle_outline_24"
                android:onClick="submit"
                android:text="@string/filter_submit" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>





</ScrollView>